traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: authentik
    namespace: traefik
spec:
    forwardAuth:
        address: https://authentik.miirage.net/outpost.goauthentik.io/auth/traefik
        trustForwardHeader: true
        tls:
          insecureSkipVerify: true
        authResponseHeaders:
            - X-authentik-username
            - X-authentik-groups
            - X-authentik-email
            - X-authentik-name
            - X-authentik-uid
            - X-authentik-jwt
            - X-authentik-meta-jwks
            - X-authentik-meta-outpost
            - X-authentik-meta-provider
            - X-authentik-meta-app
            - X-authentik-meta-version
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: redirect-to-https
    namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-forwarded-headers
  namespace: traefik
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
      X-Forwarded-Port: "443"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-bouncer
  namespace: traefik
spec:
  plugin:
    bouncer:
      enabled: true
      logLevel: INFO
      crowdsecMode: live
      crowdsecLapiKey: L47+8ToJMvfFZkE1dm0+uhcA2LfOWuzkAX5VZ+nM8Tk
      crowdsecLapiHost: "crowdsec-service.crowdsec:8080"
      redisCacheEnabled: true
      redisCacheHost: "redis-server.redis-server:6379"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-security-headers
  namespace: traefik
spec:
  headers:
    stsSeconds: 2592000
    stsIncludeSubdomains: true
    stsPreload: true
    contentSecurityPolicy: "default-src 'self' *.miirage.net"
    permissionsPolicy: 'geolocation=(self "https://*.miirage.net")'
---
