traefik-dashboard-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "traefik-dashboard"
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-add-forwarded-headers@kubernetescrd,traefik-authentik@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: "traefik"
  rules:
    - host: traefik.miirage.net 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: traefik-dashboard
              port:
                number: 80
